# dart-or-penny

./: .gitignore  Cargo.toml  README.md  build.rs  example.toml
.cargo/: config.toml
frontend/: package-lock.json  package.json  rollup.config.js  tsconfig.json
frontend/modules/: package-lock.json  rollup.config.js  tsconfig.json
frontend/modules/src/bindings/: PageItem.ts  PageItemKind.ts  ThumbnailError.ts  ThumbnailResponse.ts  index.ts
frontend/src/: page.css  page.html.tera  page.tsx
frontend/src/bindings/: ItemKind.ts  PageItem.ts  PageItemKind.ts  SearchResult.ts  ThumbnailData.ts  ThumbnailError.ts  index.ts
frontend/static/: page.js  page.js.map
frontend/static/bindings/: PageItem.js  PageItem.js.map
src/: main.rs  page.css  page.html.tera  path.rs  site.webmanifest.tera
