[package]
name = "dart-or-penny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.22.1"
chrono = "0.4.41"
md5-rs = "0.1.5"
percent-encoding = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
tera = "1.20.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.22"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.image]
version = "0.25.6"
features = ["png", "tiff", "bmp", "gif", "jpeg"]
