[package]
name = "dart-or-penny"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.13"
axum =  "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.22.1"
chrono = "0.4.41"
dashmap = "6.1.0"
infer = "0.19.0"
md5-rs = "0.1.5"
mime_guess = "2.0.5"
moka = { version = "0.12.11", features = ["future"] }
percent-encoding = "2.3.1"
rand = "0.9.2"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
tera = "1.20.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.22"
tower-http = { version = "0.6.2", features = ["fs", "compression-br"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ts-rs = "11.1.0"
webp = "0.3.0"

[dependencies.image]
version = "0.25.6"
features = ["png", "tiff", "bmp", "gif", "jpeg", "webp"]

[build-dependencies]
glob = "0.3.3"
