[package]
name = "dart-or-penny"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.13"
axum = { version = "0.8.6", features = ["http2"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
chrono = "0.4.42"
dashmap = "6.1.0"
humantime = "2.3.0"
infer = "0.19.0"
md5 = "0.8.0"
mime_guess = "2.0.5"
moka = { version = "0.12.11", features = ["future"] }
percent-encoding = "2.3.2"
regex = "1.12.2"
serde = { version = "*", features = ["derive"] }
tera = "1.20.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tower-http = { version = "*", features = ["compression-br"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
ts-rs = "11.1.0"
webp = "0.3.1"

[dependencies.image]
version = "0.25.8"
features = ["png", "tiff", "bmp", "gif", "jpeg", "webp"]

[build-dependencies]
glob = "0.3.3"
